--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   flutter_svg: ^1.1.6
   file_picker: ^5.2.4
   package_info_plus: ^3.0.3
+  pinput: ^2.2.31
 
   flutter:
     sdk: flutter
