--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   package_info_plus: ^3.0.3
   pinput: ^2.2.31
   flutter_svg: ^2.0.4
+  google_fonts: ^4.0.3
 
   flutter:
     sdk: flutter
