--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   google_maps_flutter: ^2.2.5
   url_launcher: ^6.1.10
   geolocator: ^9.0.2
+  mobile_scanner: ^3.1.1
 
   flutter:
     sdk: flutter
