--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,15 +6,13 @@ environment:
   sdk: '>=2.19.2 <3.0.0'
 
 dependencies:
-
-
   cupertino_icons: ^1.0.2
   get: 4.6.6
   intl: ^0.19.0
   get_storage: ^2.0.3
   cached_network_image: ^3.2.1
   file_picker: ^6.1.1
-  package_info_plus: ^5.0.1
+  package_info_plus: ^4.0.1
   pinput: ^3.0.1
   flutter_svg: ^2.0.4
   google_fonts: ^6.1.0
@@ -23,6 +21,7 @@ dependencies:
   geolocator: ^10.1.0
   mobile_scanner: ^3.1.1
   http: ^1.2.0
+  razorpay_flutter: ^1.3.6
 
   flutter:
     sdk: flutter
