--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   mobile_scanner: ^3.1.1
   http: ^1.2.0
   razorpay_flutter: ^1.3.6
+  dropdown_button2: ^2.3.9
 
   flutter:
     sdk: flutter
