--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   http: ^1.2.0
   razorpay_flutter: ^1.3.6
   dropdown_button2: ^2.3.9
+  share_plus: ^7.2.2
 
   flutter:
     sdk: flutter
